frontend/test/should_fail/basic_108.grg
rule dummy {
  replace {
    . -:Edge-> ;  // new edge without incident nodes is impossible
  }
}
